# copilot-skill-eval

./: .gitignore  README.md  analysis.md  generate-all-apps-notes.md  generate-apps.ps1  pyproject.toml
.github/: create-readme.md
.github/agents/: skill-eval.agent.md
.github/prompts/: copilot-skill-deep-research.prompt.md  create-library-api.prompt.md  create-vet-clinic-api.prompt.md  generate-apps.md  plan-session-tracing.md  reasoning.md
docs/: authoring-guide.md
examples/aspnet-razor-pages/: eval.yaml  skill-sources.yaml
examples/aspnet-webapi/: eval.yaml  skill-sources.yaml
research/: sources.md
research/compete/: copilot-skill-eval-vs-skill-validator.md
skills/dotnet-webapi/: SKILL.md
src-dotnet-artisan/: gen-notes.md
src-dotnet-artisan/FitnessStudioApi/: FitnessStudioApi.csproj  FitnessStudioApi.http  Program.cs  fitness_studio.db-shm  fitness_studio.db-wal
src-dotnet-artisan/LibraryApi/: LibraryApi.csproj  LibraryApi.http  Program.cs  library.db-shm  library.db-wal
src-dotnet-artisan/VetClinicApi/: Program.cs  VetClinicApi.http  appsettings.json
src-dotnet-webapi/: gen-notes.md
src-dotnet-webapi/FitnessStudioApi/: FitnessStudioApi.csproj  FitnessStudioApi.http  Program.cs
src-dotnet-webapi/LibraryApi/: LibraryApi.http  Program.cs
src-dotnet-webapi/VetClinicApi/: Program.cs  VetClinicApi.csproj  VetClinicApi.http
src-managedcode-dotnet-skills/: gen-notes.md
src-no-skills/: gen-notes.md
templates/: analyze-code.md.j2  analyze.md.j2  ci-workflow.yml.j2  create-all-apps.md.j2  create-single-app.md.j2  suggest-improvements.md.j2
(+1291 files in other folders)
